# benchwarmer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  run.sh
aggregate-report/: aggregate.csv  main.py
benchmarks/: hello.lua  json.lua
frameworks/dotnetcore-webapi/: Benchwarmer.sln  Dockerfile
frameworks/dotnetcore-webapi/Benchwarmer/: JSONReq.cs  Program.cs  Startup.cs
frameworks/dotnetcore-webapi/Benchwarmer/Controllers/: Benchwarmer.cs
frameworks/go-fasthttp/: Dockerfile  db.go  go.mod  main.go
frameworks/go-std/: Dockerfile  go.mod  go.sum  main.go
frameworks/node-express/: Dockerfile  entrypoint.sh  index.js  package.json
frameworks/openresty/: Dockerfile  entrypoint.sh
frameworks/openresty/conf/: nginx.conf  nginx.conf.tpl
frameworks/python-fastapi/: Dockerfile  Pipfile  main.py
frameworks/python-flask/: Dockerfile  main.py
frameworks/ruby-sinatra/: Dockerfile  Gemfile  config.ru  entrypoint.sh  main.rb
frameworks/rust-actix/: Cargo.toml  Dockerfile
frameworks/rust-actix/src/: main.rs
frameworks/rust-warp/src/: main.rs
go-fasthttp/: Dockerfile  go.mod  main.go
go-std/: Dockerfile  main.go
node-express/: Dockerfile  index.js  package-lock.json
openresty/: Dockerfile
postgres/init/: create_table.sql
python-fastapi/: Dockerfile  Pipfile  main.py
python-flask/: Dockerfile  app.py  main.py
rust-warp/: Cargo.toml  Dockerfile
rust-warp/src/: main.rs
scripts/: generate_report.sh  run.sh  run_tests.sh
tests/: Dockerfile  Pipfile  api_test.py
wrk-scripts/: hello.lua  json.lua
(+1 files in other folders)
